Update tmux settings

--- a/dottmux.conf
+++ b/dottmux.conf
@@ -1,9 +1,12 @@
-# remap prefix to Ctrl-a
-unbind C-b
-set -g prefix C-a
+# Options inspired by https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 
-# toggling windows
-bind-key C-a last-window
+# Set 1 as first tab
+set -g base-index 1
+
+# Remap prefix to Ctrl-a
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # split panes using | and -
 bind | split-window -h
@@ -11,6 +14,12 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+
+# don't rename windows automatically
+set-option -g allow-rename off
 
